package edu.masanz.da.pk3.sprite.interfaces;

import edu.masanz.da.pk3.sprite.weaponry.AShot;

import java.util.ArrayList;
import java.util.List;

public interface ICanShoot {

    List<AShot> shoot();

}
