package edu.masanz.da.pk3.sprite.interfaces;

import edu.masanz.da.pk3.sprite.enemies.AEnemy;

import java.util.List;

public interface ICanSpawn {

    List<AEnemy> spawn();

}
